test/invalid-semantic/64371_arg_type_mismatch/arg_type_mismatch.agu
-- Author: 64371, Ricardo Costa

let add(x, y): Int -> Int = x + y -- semantic error: argument type mismatch, type signature should be (Int, Int) -> Int